Salesforce Project/force-app/main/default/objects/Order/fields/Festival__c.field-meta.xml
<CustomField>
    <fullName>Festival__c</fullName>
    <label>Festival</label>
    <length>15</length>
    <type>Text</type>
</CustomField>