Salesforce Project/force-app/main/default/objects/Order/fields/Festival_Offer__c.field-meta.xml
<CustomField>
    <fullName>Festival_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Festival Offer</label>
    <referenceTo>Festival_Offer__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>