Salesforce Project/force-app/main/default/objects/Order/fields/Quantity_Avaliable__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Avaliable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Quantity Avaliable</label>
    <type>Checkbox</type>
</CustomField>