Salesforce Project/force-app/main/default/objects/Order/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Yes or No for stock availability</description>
    <label>Stock</label>
    <type>Checkbox</type>
</CustomField>