Salesforce Project/force-app/main/default/objects/Order/recordTypes/Customer_Order.recordType-meta.xml
<RecordType>
    <fullName>Customer_Order</fullName>
    <active>true</active>
    <description>Orders placed by individual customers.</description>
    <label>Customer Order</label>
</RecordType>