Salesforce Project/force-app/main/default/objects/Order/recordTypes/Distributor_Order.recordType-meta.xml
<RecordType>
    <fullName>Distributor_Order</fullName>
    <active>true</active>
    <description>Orders raised by distributors for bulk products.</description>
    <label>Distributor Order</label>
</RecordType>