Salesforce Project/force-app/main/default/objects/Order/validationRules/Order_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Order quantity must be greater than 0.&quot;</errorMessage>
</ValidationRule>